抖音项目实现完成，有待优化
